--- a/src/BlogBundle/Resources/views/Entry/add.html.twig
+++ b/src/BlogBundle/Resources/views/Entry/add.html.twig
@@ -2,7 +2,7 @@
 {% block content %}
     
     <div class="col-lg-6">
-        <h2>Añadir Etiquetas</h2>
+        <h2>Añadir Entrada</h2>
         {{ form_start(form)}}
         {{ form_end(form)}}
     </div>
