--- a/src/BlogBundle/Resources/views/Category/add.html.twig
+++ b/src/BlogBundle/Resources/views/Category/add.html.twig
@@ -1,8 +1,8 @@
 {% extends "BlogBundle::layout.html.twig" %}
 {% block content %}
-    
+
     <div class="col-lg-6">
-        <h2>Añadir Etiquetas</h2>
+        <h2>Editar Categoría</h2>
         {{ form_start(form)}}
         {{ form_end(form)}}
     </div>
