--- a/src/BlogBundle/Resources/views/Entry/add.html.twig
+++ b/src/BlogBundle/Resources/views/Entry/add.html.twig
@@ -3,7 +3,7 @@
     
     <div class="col-lg-6">
         <h2>Añadir Entrada</h2>
-        {{ form_start(form)}}
+        {{ form_start(form, {'enctype': 'mulpart/form-data'})}}
         {{ form_end(form)}}
     </div>
     <div class ="clearfix"></div>
